--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -182,7 +182,7 @@ a{
 .tile6 > a:hover > .portfolio-desc {
     background: rgb(209, 26, 255);
     color: var(--platinum);
-    box-shadow: 0 30px 100px white;
+    box-shadow: 0 30px 100px rgb(209, 26, 255);
     z-index: 1;
 }
 
